@@ -1,3 +1,7 @@
+20070313
+ - (dtucker) [entropy.c scard-opensc.c ssh-rand-helper.c] Bug #1294: include
+   string.h to prevent warnings, from vapier at gentoo.org.
+
 20070306
  - (djm) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2007/03/01 16:19:33
@@ -2816,4 +2820,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4636 2007/03/08 09:13:39 djm Exp $
+$Id: ChangeLog,v 1.4637 2007/03/12 20:35:38 dtucker Exp $
